--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,52 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
+  padding: 30px;
+  margin: 0 auto;
   width: 1220px;
+  font-family: "Roboto", sans-serif;
+}
+
+ul {
+  list-style: none;
 }
 
 .head {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   flex-direction: row-reverse;
   align-items: center;
 }
+
 .content {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 10px;
+  grid-template-columns: repeat(6, 1fr);
+  column-gap: 30px;
+}
+
+section {
+  grid-column: span 3;
+}
+
+.about {
+  width: 100%;
+}
+
+.head-title {
+  width: 565px;
+}
+h1 {
+  display: block;
+  margin-bottom: 27px;
+  font-size: 74px;
+}
+
+.head-desc {
+  display: block;
+  margin: 0 auto;
+  font-size: 37px;
 }
