--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,18 @@ section {
   width: 565px;
 }
 h1 {
-  display: block;
+  margin: 0 auto;
   margin-bottom: 27px;
   font-size: 74px;
 }
 
 .head-desc {
   display: block;
-  margin: 0 auto;
   font-size: 37px;
+}
+.head-wrap {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left:195px;
+  background-color: chartreuse;
 }
