'feat: add section education/css'

--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,14 @@ h1 {
   padding-left:195px;
   background-color: chartreuse;
 }
+/* start education */
+.education-title{
+  padding-bottom: 25px;
+  font-size: 37px;
+}
+
+
+
+
+
+/*  */
