--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,17 @@ p {
   background-color: rgb(58, 63, 61);
   color: white;
 }
+
+/*  */
+.line {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: black;
+}
+
+.line-wrap{
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+/*  */
