--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,11 @@ p {
   background-color: black;
 }
 
-.line-wrap{
+.line-wrap {
   padding-left: 20px;
   padding-bottom: 20px;
+}
+.line-left {
+  background-color: rgb(255, 230, 0);
 }
 /*  */
