--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,16 @@ img {
 .head-title {
   width: 565px;
 }
-.head-pic {
-  background-color: rgb(58, 63, 61);
-}
 
 h1 {
   margin: 0 auto;
   margin-bottom: 27px;
   font-size: 74px;
 }
+.surname {
+  font-weight: normal;
+}
+
 h2 {
   padding-left: 20px;
   padding-bottom: 20px;
@@ -68,7 +69,7 @@ p {
 .head-wrap {
   padding-top: 40px;
   padding-bottom: 40px;
-  padding-left: 145px;
+  padding-left: 143px;
   background-color: rgb(255, 230, 0);
 }
 .title-list-item {
@@ -78,10 +79,17 @@ p {
 
 .education,
 .contacts,
-.code {
-  background-color: rgb(58, 63, 61);
+.code,
+.head-pic {
+  background-color: rgb(48, 51, 50);
   color: white;
 }
+
+/*  */
+.education {
+  padding-top: 40px;
+}
+/*  */
 
 /*  */
 .line {
