--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ p {
   line-height: 30px;
 }
 
+a{
+  text-decoration: none;
+  color: #fff;
+}
 .head-desc {
   padding-left: 0;
   display: block;
