'feat: add item-desc/css'

--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,10 @@ a{
   background-color: rgb(255, 230, 0);
 }
 /*  */
+.cont-icon{
+  display: block;
+}
+.item-desc{
+  display: flex;
+  align-items: center;
+}
