--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,6 @@ a {
 
 /* end setting */
 
-
-
 /* start head */
 .head {
   display: flex;
@@ -143,3 +141,9 @@ a {
   align-items: center;
 }
 /* end contacts */
+
+/* code */
+.code-link:hover {
+  color:rgb(255, 230, 0);
+}
+/* code */
