feat: add ava9 and del filter b&w'

--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,6 @@ a {
   width: 450.31px;
   height: 542.06px;
 }
-.pic-avatar {
-  filter: grayscale(1); /* Черно-белый фильтр для изображения */
-  transition: 1s; /* Время изменения цвета изображения */
-}
-.pic-avatar:hover {
-  filter: grayscale(0); /* Цветное изображение при наведении */
-}
 
 .head-title {
   width: 565px;
@@ -130,6 +123,10 @@ a {
 
 .line-left {
   background-color: rgb(255, 230, 0);
+}
+
+.item-desk__link:hover{
+  color:rgb(255, 230, 0);
 }
 /* end education */
 
