--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,14 @@ a {
 }
 
 .head-pic {
-  width: 450.31px;
-  height: 542.06px;
+  display: block;
+  width: 100%;
+}
+.pic-avatar {
+  padding-top: 15px;
+  display: block;
+  
+  margin: 0 auto;
 }
 
 .head-title {
@@ -125,8 +131,8 @@ a {
   background-color: rgb(255, 230, 0);
 }
 
-.item-desk__link:hover{
-  color:rgb(255, 230, 0);
+.item-desk__link:hover {
+  color: rgb(255, 230, 0);
 }
 /* end education */
 
@@ -169,7 +175,7 @@ a {
 /* end work */
 
 /* start skills */
-.skills-icon{
+.skills-icon {
   padding-right: 10px;
 }
 /* end skills */
