--- a/css/style.css
+++ b/css/style.css
@@ -76,13 +76,14 @@ a {
 
 .head-pic {
   display: block;
+  width: 100%;
 
 }
 .pic-avatar {
   padding-top: 15px;
   padding-left: 20px;
+  padding-right: 20px;
   display: block;
-  width: 100%;
 }
 
 .head-title {
