--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ table {
 
 body {
   max-width: 1280px;
-  padding:я  30px;
+  padding: 30px;
   margin: 0 auto;
   font-family: "Roboto", sans-serif;
 }
@@ -208,7 +208,7 @@ a {
 }
 
 .head-title {
-  width: 551px;
+  width: 100%;
 }
 
 .surname {
@@ -269,7 +269,7 @@ a {
 /* end about */
 
 /* start contacts */
-.contacts{
+.contacts {
   margin-top: -1px;
 }
 .item-desc {
@@ -283,9 +283,13 @@ a {
 /* end contacts */
 
 /* code */
-.code{
+.code {
   margin-top: -1px;
 }
+pre {
+  font-size: max(0.9vw, 0.25rem);
+}
+
 .code-link {
   color: rgb(255, 230, 0);
 }
@@ -305,3 +309,59 @@ a {
 }
 
 /* end skills */
+
+@media screen and (max-width: 1050px) {
+  .head-wrap {
+    padding-left: 50px;
+  }
+  .head-title {
+    font-size: 64px;
+  }
+  .head-desc {
+    font-size: 27px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .head-wrap {
+    padding-left: 20px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .about,
+  .skills,
+  .work {
+    background-color:  rgba(48, 51, 50, 0.103);
+  }
+
+  .head {
+    flex-direction: column;
+  }
+
+  .head-wrap,
+  .head-pic {
+    width: 100%;
+  }
+  .head-wrap{
+    padding: 20px;
+    
+  }
+
+  .head-title {
+    margin-bottom:  15px;
+    font-size: 44px;
+    text-align: center;
+  }
+  .head-desc {
+    text-align: center;
+  }
+  pre {
+    font-size: max(0.9vw, 0.6rem);
+  }
+
+  .content {
+    grid-template-columns: 100%;
+  }
+}
+
