'refactor:add padding top/bottom 0px in body 1050'

--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ pre {
 
 @media screen and (max-width: 1050px) {
   body {
-    padding: 10px;
+    padding: 0 10px;
   }
   .head-wrap {
     padding-left: 50px;
