--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,7 @@ pre {
 
 @media screen and (max-width: 375px) {
   pre {
-    font-size: max(0.9vw, 0.5rem);
+    font-size: max(1vw, 0.45rem);
   }
 }
 @media screen and (max-width: 320px) {
@@ -380,7 +380,7 @@ pre {
   .head-desc{
     font-size: 20px;
   }
-  pre {
+  /* pre {
     font-size: max(1vw, 0.5rem);
-  }
+  } */
 }
