--- a/css/style.css
+++ b/css/style.css
@@ -284,15 +284,20 @@ a {
 /* end contacts */
 
 /* code */
-.code {
-  margin-top: -2px;
+.list {
+  width: 100%;
+  padding-left: 50px;
 }
-pre {
-  font-size: max(0.9vw, 0.30rem);
+.link {
+  display: block;
+  margin: 20px;
+  font-size: 18px;
+transition: .3s;
 }
 
-.code-link {
-  color: rgb(255, 230, 0);
+.link:hover {
+  color: rgb(255, 240, 106);
+  transform: translateY(-3px) ;
 }
 
 /* code */
@@ -377,10 +382,7 @@ pre {
   .head-title {
     font-size: 34px;
   }
-  .head-desc{
+  .head-desc {
     font-size: 20px;
   }
-  /* pre {
-    font-size: max(1vw, 0.5rem);
-  } */
 }
