--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/*  */ /*  */
+/*  */
+/*  */
 html,
 body,
 div,
@@ -87,6 +88,7 @@ video {
   /* font: inherit; */
   vertical-align: baseline;
 }
+
 article,
 aside,
 details,
@@ -100,20 +102,25 @@ nav,
 section {
   display: block;
 }
+
 html {
   height: 100%;
 }
+
 body {
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -121,11 +128,14 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/*  */ /*  */
+
+/*  */
+/*  */
 
 * {
   box-sizing: border-box;
@@ -148,11 +158,13 @@ h1 {
 ul {
   list-style: none;
 }
+
 h2 {
   padding-left: 20px;
   padding-bottom: 20px;
   font-size: 37px;
 }
+
 p {
   padding-right: 20px;
   padding-left: 50px;
@@ -160,10 +172,12 @@ p {
   font-size: 18px;
   line-height: 30px;
 }
+
 a {
   text-decoration: none;
   color: #fff;
 }
+
 /* ************************************* */
 .education,
 .contacts,
@@ -172,6 +186,7 @@ a {
   color: white;
   padding-top: 40px;
 }
+
 .about,
 .skills,
 .work {
@@ -199,12 +214,15 @@ a {
 }
 
 .head-pic {
-  width: 40%;
   display: block;
+  width: 40%;
+  max-height: 550px;
 }
+
 .pic-avatar {
   display: block;
   width: 100%;
+  object-fit: contain;
 }
 
 .head-title {
@@ -229,6 +247,7 @@ a {
   grid-template-columns: 40% 60%;
   column-gap: 0px;
 }
+
 /* end content */
 
 /* start education */
@@ -236,6 +255,7 @@ a {
   display: block;
   margin-top: -1px;
 }
+
 .title-list-item {
   font-weight: 600;
   font-size: 27px;
@@ -267,16 +287,19 @@ a {
 .about {
   width: 100%;
 }
+
 /* end about */
 
 /* start contacts */
 .contacts {
   margin-top: -1px;
 }
+
 .item-desc {
   display: flex;
   align-items: center;
 }
+
 .link-contact:hover {
   color: rgb(255, 240, 106);
 }
@@ -288,6 +311,7 @@ a {
   width: 100%;
   padding-left: 50px;
 }
+
 .link {
   display: inline-block;
   margin: 20px 20px 0 20px;
@@ -295,9 +319,13 @@ a {
   transition: .3s;
 }
 
+.link:last-child {
+  margin-bottom: 20px;
+}
+
 .link:hover {
   color: rgb(255, 240, 106);
-  transform: translateY(-3px) ;
+  transform: translateY(-3px);
 }
 
 /* code */
@@ -320,12 +348,15 @@ a {
   body {
     padding: 0;
   }
+
   .head-wrap {
     padding-left: 50px;
   }
+
   .head-title {
     font-size: 64px;
   }
+
   .head-desc {
     font-size: 27px;
   }
@@ -338,6 +369,7 @@ a {
 }
 
 @media screen and (max-width: 425px) {
+
   .about,
   .skills,
   .work {
@@ -352,6 +384,7 @@ a {
   .head-pic {
     width: 100%;
   }
+
   .head-wrap {
     padding: 20px;
   }
@@ -361,9 +394,11 @@ a {
     font-size: 44px;
     text-align: center;
   }
+
   .head-desc {
     text-align: center;
   }
+
   pre {
     font-size: max(0.9vw, 0.6rem);
   }
@@ -378,10 +413,12 @@ a {
     font-size: max(1vw, 0.45rem);
   }
 }
+
 @media screen and (max-width: 320px) {
   .head-title {
     font-size: 34px;
   }
+
   .head-desc {
     font-size: 20px;
   }
